--- a/services/deepface-service/requirements.txt
+++ b/services/deepface-service/requirements.txt
@@ -1,9 +1,12 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 python-multipart==0.0.6
-deepface==0.0.89
-tf-keras==2.15.0
-tensorflow==2.15.0
-numpy>=1.24.0,<2.0.0
+numpy>=1.24.0
 Pillow>=10.0.0
 pydantic>=2.0.0
+opencv-python>=4.8.0
+scikit-learn>=1.3.0
+deepface>=0.0.79
+tensorflow>=2.13.0
+torch>=2.0.0
+retina-face>=0.0.13
